--- a/README
+++ b/README
@@ -3,10 +3,8 @@ Author : Thomas Recouvreux
 
 
 TODO
-	- passer sous python3
 	- gestion de groupes de communication
-
-
+	- un fichier par class client ?
 
 
 
