--- a/README
+++ b/README
@@ -1,6 +1,14 @@
 Author : Thomas Recouvreux
 
 
+DOXYFILE
+	- install graphviz	(http://doc.ubuntu-fr.org/graphviz)	# pour des jolis diagrammes
+	- install doxypy	(http://code.foosel.org/doxypy)		# pour la doc python
+
+PYTHON
+	- python3
+	- python3-serial
+	- python3-tk
 
 TODO
 	- gestion de groupes de communication
