--- a/README
+++ b/README
@@ -15,6 +15,7 @@ TODO
 	- un fichier par class client ?
 	- killer les clients quand il sont déconnecter (donc il faut detecter leur deconnexion)
 	- récupération de la conf des clients
-
+	- sauvegarder macros
+	- interface graphique ?
 
 
